--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,10 @@
     "format"
   ],
   "dependencies": {
-    "angular": "1.5.0"
+    "angular": "^1.5.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.5.0"
+    "angular-mocks": "^1.5.0"
   },
   "ignore": [
     "test",
